# gmtl-mirror

./: AUTHORS  ChangeLog  Makefile.in  README  README-PyGMTL  SConstruct  VERSION  configure.in  gmtl-config  gmtl-config.in  gmtl.pc.in  gmtl.spec  pygmtl.spec
CVSROOT/: cfg_local.pm  commit_prep.pl  (+3 more)
GGT/: .jotcruft_2716  Gatherrc  Makefile.in  Makefile.inc.in  acconfig.h  common-deps.esrc  configure.in  cvs-gather.pl  deps.esrc  es.pl  gfxConfig.h  make.defs.mk.in  overrides.patrick  setupRepos  setupRepos.gmtl
GGT/Threads/: Barrier.cpp  Barrier.h  CondVar.h  Guard.h  Makefile.in  Mutex.h  RWMutex.h  TSObject.h  TSObjectProxy.h  TSTable.cpp  TSTable.h  Thread.cpp  Thread.h  ThreadFunctor.cpp  ThreadFunctor.h  ThreadManager.cpp  ThreadManager.h  ThreadPool.cpp  ThreadPool.h
GGT/Util/: Assert.h  Debug.cpp  Debug.h  Singleton.h  Timer.h
GGT/macros/: gmtl.m4
GGT/modules/GMTL/: ChangeLog  Makefile.in  README  SConstruct  VERSION  configure.in  gmtl-config  gmtl-config.in  gmtl.pc.in  gmtl.spec  pygmtl.spec
GGT/modules/GMTL/Test/: Makefile.in  SConscript
GGT/modules/GMTL/Test/TestSuite/: Makefile  Makefile.old  SConscript  gmtl_metrics.txt  runner.cpp  testSuite.cpp
GGT/modules/GMTL/Test/TestSuite/GMTL/: IntersectionTest.h  MatrixTest.h  OOBoxTest.h  XformTest.h
GGT/modules/GMTL/Test/TestSuite/TestCases/: AABoxContainTest.cpp  AABoxContainTest.h  AABoxOpsTest.cpp  AABoxTest.cpp  AABoxTest.h  AxisAngleClassTest.cpp  AxisAngleCompareTest.h  ContainmentTest.h  ConvertTest.h  CoordClassTest.cpp  CoordClassTest.h  CoordCompareTest.cpp  CoordGenTest.cpp  CoordGenTest.h  EulerAngleClassTest.cpp  EulerAngleClassTest.h  EulerAngleCompareTest.cpp  EulerAngleCompareTest.h  GenerateTest.h  IntersectionTest.cpp  IntersectionTest.h  LineSegTest.cpp  LineSegTest.h  MathTest.cpp  MathTest.h  MatrixClassTest.cpp  MatrixClassTest.h  MatrixCompareTest.cpp  MatrixCompareTest.h  MatrixGenTest.cpp  MatrixGenTest.h  MatrixOpsTest.cpp  MatrixOpsTest.h  MatrixStateTrackingTest.cpp  MatrixTest.h  MetaTest.h  OOBoxTest.h  OutputTest.cpp  OutputTest.h  PlaneTest.cpp  (+28 more)
GGT/modules/GMTL/Test/TestSuite/vc7/: TestSuite.sln  TestSuite.vcproj
GGT/modules/GMTL/docs/: Makefile  docbook.mk  ex_builder.py  gmtl.doxy  gmtl.latex.doxy  gmtl.man.doxy  version.mk.doxy
GGT/modules/GMTL/docs/faq/: gmtlfaq.doxygen
GGT/modules/GMTL/docs/programmer.guide/: Makefile  guide.xml
GGT/modules/GMTL/docs/sourceforge.site/: index.html
GGT/modules/GMTL/gmtl/: AABox.h  AABoxOps.h  Assert.h  AxisAngle.h  AxisAngleOps.h  Compare.h  Config.h  Containment.h  Convert.h  Coord.h  CoordOps.h  Defines.h  EulerAngle.h  EulerAngleOps.h  Frustum.h  FrustumOps.h  Generate.h  Helpers.h  Intersection.cpp  Intersection.h  LineSeg.h  LineSegOps.h  Math.h  Matrix.cpp  Matrix.h  MatrixOps.h  Meta.h  OOBox.h  Output.h  Plane.h  PlaneOps.h  Point.h  Quat.cpp  Quat.h  QuatOps.h  Ray.h  SConscript  Sphere.h  SphereOps.h  Tri.h  (+20 more)
GGT/modules/GMTL/gmtl/Fit/: GaussPointsFit.h
GGT/modules/GMTL/gmtl/Numerics/: Eigen.cpp  Eigen.h  Makefile.in
GGT/modules/GMTL/gmtl/Util/: Meta.h  SConscript  StaticAssert.h
GGT/modules/GMTL/python/: SConscript
GGT/modules/GMTL/python/src/: SConscript  gmtl-AxisAngleOps.h  gmtl-Containment.h  gmtl-CoordOps.h  gmtl-EulerAngleOps.h  gmtl-GenOps.h  gmtl-Generate.h  gmtl-MatrixOps.h  gmtl-PlaneOps.h  gmtl-SphereOps.h  gmtl-TriOps.h  gmtl-VecOps.h  gmtl-array-wrappers.h  gmtl-callable-wrappers.h  gmtl-containment-wrappers.h  gmtl-functions.h  gmtl-getData-wrappers.h  gmtl-intersect-wrappers.h  gmtl-pickle.h  gmtl-wrappers.h
GGT/modules/GMTL/python/src/gmtl/: SConscript  _AABox_double.cpp  _AABox_float.cpp  _AxisAngle_double.cpp  _AxisAngle_float.cpp  _Coord_gmtl_Vec_double_3_gmtl_AxisAngle_double.cpp  _Coord_gmtl_Vec_double_3_gmtl_EulerAngle_double_gmtl_XYZ.cpp  _Coord_gmtl_Vec_double_3_gmtl_EulerAngle_double_gmtl_ZXY.cpp  _Coord_gmtl_Vec_double_3_gmtl_EulerAngle_double_gmtl_ZYX.cpp  _Coord_gmtl_Vec_double_3_gmtl_Quat_double.cpp  _Coord_gmtl_Vec_double_4_gmtl_AxisAngle_double.cpp  _Coord_gmtl_Vec_double_4_gmtl_EulerAngle_double_gmtl_XYZ.cpp  _Coord_gmtl_Vec_double_4_gmtl_EulerAngle_double_gmtl_ZXY.cpp  _Coord_gmtl_Vec_double_4_gmtl_EulerAngle_double_gmtl_ZYX.cpp  _Coord_gmtl_Vec_double_4_gmtl_Quat_double.cpp  _Coord_gmtl_Vec_float_3_gmtl_AxisAngle_float.cpp  _Coord_gmtl_Vec_float_3_gmtl_EulerAngle_float_gmtl_XYZ.cpp  _Coord_gmtl_Vec_float_3_gmtl_EulerAngle_float_gmtl_ZXY.cpp  _Coord_gmtl_Vec_float_3_gmtl_EulerAngle_float_gmtl_ZYX.cpp  _Coord_gmtl_Vec_float_3_gmtl_Quat_float.cpp  _Coord_gmtl_Vec_float_4_gmtl_AxisAngle_float.cpp  _Coord_gmtl_Vec_float_4_gmtl_EulerAngle_float_gmtl_XYZ.cpp  _Coord_gmtl_Vec_float_4_gmtl_EulerAngle_float_gmtl_ZXY.cpp  _Coord_gmtl_Vec_float_4_gmtl_EulerAngle_float_gmtl_ZYX.cpp  _Coord_gmtl_Vec_float_4_gmtl_Quat_float.cpp  _EulerAngle_float_gmtl_XYZ.cpp  _EulerAngle_float_gmtl_ZXY.cpp  _EulerAngle_float_gmtl_ZYX.cpp  _Frustum_double.cpp  _LineSeg_double.cpp  _LineSeg_float.cpp  _Matrix_float_3_3.cpp  _Matrix_float_4_4.cpp  _Plane_double.cpp  _Plane_float.cpp  _Point_double_2.cpp  _Point_double_3.cpp  _Point_float_2.cpp  _Point_float_3.cpp  _Point_int_2.cpp  (+45 more)
GGT/modules/GMTL/python/test/: SConscript  testsuite.py
GGT/modules/SGA/: Makefile.in
GGT/modules/SGA/Test/: Makefile.in
GGT/modules/SGA/Test/TestSuite/SGA/: ContainerHolderTest.h  PfNodeAdapterTest.h  PfTriangleListAdapterTest.h
GGT/modules/SGA/sga/: ContainerBase.h  ContainerHolder.h  ContainerTypes.h  ObbBoundingTree.cpp  ObbBoundingTree.h  ObbBoundingTreeTravFuncs.h  ObbNodeContainer.h  ObbTraversals.cpp  ObbTraversals.h  ObbTreeContainer.h  PfHelperFuncs.h  PfNodeAdapters.h  PfTriangleListAdapter.h  TravFuncs.h  Traverser.cpp  Traverser.h  TriangleList.h
GGT/release/scripts/: print-targets.sh
GGT/scripts/auto-copyright/: Makefile  auto-copyright.pl
GGT/scripts/auto-copyright/config/: ggt-copyright-replace.c.pl  ggt-copyright-replace.hash.pl  ggt-heading-replace.c.pl  ggt-heading-replace.hash.pl
GGT/scripts/auto-copyright/data/: ggt-copyright.c.txt  ggt-copyright.hash.txt  ggt-heading.c.txt  ggt-heading.hash.txt
(+327 files in other folders)
