# ************************************************************* ggt-head beg
#
# GGT: Generic Graphics Toolkit
#
# Original Authors:
#   Allen Bierbaum
#
# -----------------------------------------------------------------
# File:          $RCSfile: configure.in,v $
# Date modified: $Date: 2002-04-19 18:54:57 $
# Version:       $Revision: 1.1 $
# -----------------------------------------------------------------
#
# ********************************************************** ggt-head end
# ************************************************************** ggt-cpr beg
# 
# GGT: The Generic Graphics Toolkit
# Copyright (C) 2001,2002 Allen Bierbaum
#
# This library is free software; you can redistribute it and/or
# modify it under the terms of the GNU Lesser General Public
# License as published by the Free Software Foundation; either
# version 2.1 of the License, or (at your option) any later version.
#
# This library is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
# Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public
# License along with this library; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
#
# *********************************************************** ggt-cpr end

AC_REVISION($Revision: 1.1 $)
AC_INIT(gmtl/gmtlConfig.h)

gmtl_cxxflags=''
gmtl_extra_cxxflags=''
gmtl_extra_include_dirs=''

AC_SUBST(gmtl_cxxflags)
AC_SUBST(gmtl_extra_cxxflags)
AC_SUBST(gmtl_extra_include_dirs)

AC_OUTPUT(gmtl-config
          Makefile,
   [ sed -e 's/^\(%.*\)/#\1/g' gmtl-config > gmtl-config.tmp
     mv gmtl-config.tmp gmtl-config
     chmod a+x gmtl-config ])
